--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,11 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               {
+                "glob":"**/*",
+                "input": "src/assets",
+                "output": "/assets"
+              },
+              {
                 "glob": "**/*",
                 "input": "public"
               }
